<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="io.keepcoding.guedr.MainActivity">

    <ImageView
        android:id="@+id/offline_weather_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/offline_weather2"
        android:contentDescription="@string/offline_weather_image_content_description"
        />

    <Button
        android:id="@+id/change_stone_system"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/change_stone_system"/>

    <Button
        android:id="@+id/change_donkey_system"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_donkey_system"
        android:layout_gravity="center"/>


</LinearLayout>
